# Backend_TG

./: Dockerfile  docker-compose.yaml  locustfile.py  pyproject.toml
project/: settings.py  urls.py
project/acl/: apps.py  models.py  urls.py  views.py
project/acl/management/commands/: acl_create_user.py
project/acl/migrations/: 0001_initial.py
project/payment/: apps.py  models.py  urls.py  views.py
project/payment/migrations/: 0001_initial.py
project/products/: models.py  serializers.py  urls.py  views.py
project/products/management/commands/: create_products.py
project/products/migrations/: 0001_initial.py  0002_remove_product_gin_name_idx_alter_product_image_link_and_more.py
